# mcp-demos

./: main.py  pyproject.toml
data/: mailing_lists.csv  sqlite.db  user_data.csv  user_mail.csv
dnd_data/: characters.json  encounters.json
dnd_data/notes/: 20250602_131312_the_arcane_emporium.md  20250602_131416_quest_hook.md  20250604_155733_the_arcane_emporium.md  20250604_155824_quest_hook_lost_dwarven_artifact.md
docs/: devlinks.md  links.md  notes.txt  web-scraper-demo.md
scripts/: beautifulsoup_demo.py  csv_to_sqlite.py  langfuse_demo.py  langtrace_demo.py  playwright_demo.py  run_conversion.sh  sqlite3_demo.py
src/: dnd-server.py  hello-world-server.py  precision-citation-server.py  server.py  ttg-server.py
tests/: dnd-test.py  hello-world-demo.py  main.py  precision-citation-demo.py
